# fitsblender

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  README.md  RECON-INFO  azure-pipelines.yml  defsetup.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  stsci_distutils_hack.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-to-pypi.yml
doc/source/: conf.py
docs/: Makefile
docs/source/: conf.py  index.rst
fitsblender/: __init__.py  acs_header.rules  blender.py  blendheaders.py  jwst_header.rules  nicmos_header.rules  nircam_header.rules  stis_header.rules  wfc3_header.rules  wfpc2_header.rules
fitsblender/pars/: blendheaders.cfg  blendheaders.cfgspc
fitsblender/tests/: IUElwp25637mxlo.fits  test_fitsblender.py
lib/fitsblender/: __init__.py  acs_header.rules  blender.py  blendheaders.py  hst_header.rules  nicmos_header.rules  nirspec_header.rules  stis_header.rules  wfc3_header.rules  wfpc2_header.rules
lib/fitsblender/tests/: UITfuv2582gc.fits  WFPC2u5780205r_c0fx.fits  test.py
lib/tests/: EUVEngc4151imgx.fits  FGSf64y0106m_a1f.fits  FOSy19g0309t_c2f.fits  WFPC2ASSNu5780205bx.fits
tests/: HRSz0yd020fm_c2f.fits  NICMOSn4hk12010_mos.fits  test.py
