[project]
name = "fitsblender"
description = "Aggregate values in FITS headers"
authors = [
    { name = "Michael Droettboom" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "astropy>=5.0.4",
    "numpy",
    "stsci.tools",
]
dynamic = [
    "version",
]
requires-python = ">=3.10"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
docs = [
    "sphinx",
    "numpydoc",
]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools >=60",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
fitsblender = [
    "*.rules",
    "pars/*",
    "tests/*.fits",
]

[tool.setuptools_scm]
