[metadata]
name = fitsblender

# version is the *next* version to be released, with .dev at the end if it is not final
version = 0.2.dev
vdate = 01-Mar-2012

summary = Aggregate values in FITS headers
author = Michael Droettboom

author-email = help@stsci.edu

home-page = http://www.stsci.edu/resources/software_hardware/pyraf/stsci_python
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    # Add this if your project supports Python 3
    #Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules


[files]
packages_root = lib

packages =
	fitsblender 
	fitsblender.tests

data_files =
        fitsblender/pars = lib/fitsblender/pars/*
        fitsblender/tests =lib/fitsblender/tests/*.fits
        fitsblender = lib/fitsblender/*.rules

[global]
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

