[files]
data_files =
	fitsblender/pars = lib/fitsblender/pars/*
	fitsblender/tests =lib/fitsblender/tests/*.fits
	fitsblender = lib/fitsblender/*.rules
packages =
	fitsblender
	fitsblender.tests
packages_root = lib

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[global]
setup_hooks =
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

[metadata]
name = fitsblender
author = Michael Droettboom
requires-python = >=2.7
vdate = 17-Oct-2016
home-page = http://www.stsci.edu/resources/software_hardware/pyraf/stsci_python
summary = Aggregate values in FITS headers
version = 0.3.0
classifier =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
author-email = help@stsci.edu
